syntax = "proto3";

package org.v1;

import "google/type/datetime.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

message Org {
  string id = 1;
  string name = 2;
  string owner_id = 3;
  google.type.DateTime updated_at = 4;
  google.type.DateTime created_at = 5;
  string github_install_id = 6 [(validate.rules).string.pattern = "^[0-9]*$"];
}

message GetOrgsByMemberRequest {
  string member_id = 1;
}

message GetOrgsByMemberResponse {
  repeated Org orgs = 1;
}

message GetOrgRequest {
  string id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

message GetOrgResponse {
  Org org = 1;
}

message UpsertOrgRequest {
  string id = 1 [
    (validate.rules).string = {
      len: 26,
      ignore_empty: true
    },
    (tagger.tags) = "faker:\"-\""
  ];
  string name = 2;
  string owner_id = 3;
  string github_install_id = 4;
  string override_id = 5;
}

message UpsertOrgResponse {
  Org org = 1;
}

message DeleteOrgRequest {
  string id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

message DeleteOrgResponse {
  bool deleted = 1;
}
